--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,231 @@
+/* ---------- Page ---------- */
+* {
+    margin: 0;
+    padding: 0;
+}
+html {
+    scroll-behavior: smooth;
+}
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    font-family: 'Kanit', sans-serif;
+    letter-spacing: .3px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+
+/* ---------- Scrollbar ---------- */
+::-webkit-scrollbar { 
+    width: 10px; 
+}
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey;
+}
+::-webkit-scrollbar-thumb {
+    background: #950101; 
+    box-shadow: inset 1px 1px 5px #FF0000;
+}
+::-webkit-scrollbar-thumb:hover { 
+    background: #FF0000;
+    box-shadow: inset 1px 1px 5px #950101; 
+}
+
+
+/* ---------- Color ---------- */
+:root {
+    --background: #fafafa;
+    --text: black;
+    --text-subtitle: #3d0000;
+
+    --toggle-dm: rgb(255, 255, 255, .8);
+    --shadow-nav: transparent;
+
+    --header-h: #272727;
+    --arrow: #ff0000;
+    --border-btn: #950101;
+    --border-btm: #585858;
+    --back-img: #272727;
+    --btn-style: black;
+
+    --about-profile: white;
+
+    --title-jumbotron: white;
+    --header2-style: #272727;
+
+    --galery-jumbotron: #3d0000;
+    --btn-galery: white;
+    --btn-detail1: black;
+    --btn-text-detail: white;
+
+    --footer: #3d0000;
+}
+
+[data-theme="dark"] {
+    --background: #151515;
+    --text: white;
+    --text-subtitle: #ffffff;
+
+    --toggle-dm: #3d0000;
+    --shadow-nav: red;
+
+    --header-h: #3d0000;
+    --arrow: #ffffff;
+    --border-btn: #ff0000;
+    --border-btm: #ff0000;
+    --back-img: #676565;
+    --btn-style: #950101;
+
+    --about-profile: #272727;
+
+    --title-jumbotron: red;
+    --header2-style: #950101;
+
+    --galery-jumbotron: #272727;
+    --btn-galery: red;
+    --btn-detail1: white;
+    --btn-text-detail: black;
+
+    --footer: #000000;
+}
+
+
+/* ---------- Navbar ---------- */
+.error {
+    background-color: var(--background);
+    color: var(--text);
+}
+.error button {
+    color: var(--text);
+}
+
+
+/* ---------- Navbar ---------- */
+.navbar .navigation .toggle-dm button {
+    background-color: var(--toggle-dm);
+    color: var(--text);
+    transition: background-color 1s;
+}
+.navbar-bg {
+    box-shadow: 0px 0px 10px var(--shadow-nav);
+}
+
+
+/* ---------- Home Page ---------- */
+.home-page {
+    background-color: var(--background);
+    color: var(--text);
+    transition: background-color 1s;
+}
+.home-page .home-jumbotron {
+    background-color: var(--header-h);
+    transition: background-color 1s;
+}
+.bg-content-jumbotron .content-button button {
+    border: 3px solid var(--border-btn);
+    transition: background-color 1s;
+}
+.home-page .home-content {
+    background-color: var(--background);
+    transition: background-color 1s;
+}
+.home-content .new-photo,
+.home-content .style-photo {
+    border-bottom: 2px solid var(--border-btm);
+}
+.new-photo .title-new-photo {
+    color: var(--text-subtitle);
+}
+.new-photo .more-photo a {
+    color: var(--text-subtitle);
+}
+.card-new-photo .card-photo::before { 
+    background-color: var(--back-img);
+    transition: background-color 1s;
+}
+.style-photo .my-style-photo img { 
+    border: 2px solid var(--text);
+}
+.style-photo .button-to-style button { 
+    border: 2px solid rgb(207, 207, 207);
+    background-color: var(--btn-style);
+}
+
+
+/* ---------- About Page ---------- */
+.about-page {
+    background-color: var(--background);
+}
+.about-page .about-content { 
+    background-color: var(--background);
+    transition: background-color 1s;
+}
+.about-content .about-rzootd .text-content h1 {
+    color: var(--text-subtitle);
+    transition:  1s;
+}
+.about-content .about-rzootd .text-content p,
+.content-profile .content-text p,
+.content-profile .content-text .sosmed li a {
+    color: var(--text);
+    transition: 1s;
+}
+.about-content .profile h1 { 
+    color: var(--text-subtitle);
+    transition: 1s;
+}
+.about-content .profile .content-profile { 
+    background-color: var(--about-profile);
+    transition: background-color 1s;
+}
+
+
+/* ---------- Style Page ---------- */
+.style-page { 
+    background-color: var(--background);
+    transition: background-color 1s;
+}
+.style-jumbotron .jumbotron-content .bottom-text{ 
+    color: var(--title-jumbotron);
+    transition: 1s;
+}
+
+
+/* ---------- Galery Page ---------- */
+.galery-page { 
+    background-color: var(--background);
+    transition: background-color 1s;
+}
+.galery-jumbotron {
+    background-image: linear-gradient(15deg, var(--galery-jumbotron), black);
+    transition: 1s;
+}
+.galery-jumbotron .button-content button{ 
+    border: 3px solid var(--btn-galery);
+    transition: 1s;
+}
+.rz-galery .galery-card .button-detail .btn-detail-1 {
+    background-color: var(--btn-detail1);
+    color: var(--btn-text-detail);
+    border: none;
+}
+.rz-galery .galery-card .button-detail .btn-detail-2 {
+    background-color: transparent;
+    border: 3px solid var(--text);
+    color: var(--text);
+}
+
+
+/* ---------- Style Page ---------- */
+.style-page .style-content { 
+    background-color: var(--background);
+    transition: background-color 1s;
+}
+.style-content .header-contentD { 
+    background-color: var(--header2-style);
+    transition: background-color 1s;
+}
+
+
+/* ---------- Footer ---------- */ 
+.footer {
+    background-color: var(--footer);
+    transition: background-color 1s;
 }
