--- a/src/style/container/style.css
+++ b/src/style/container/style.css
@@ -187,8 +187,9 @@
 
 .outfit-style .content-outfit {
     width: 100%;
-    height: 500px;
+    height: auto;
     display: flex;
+    align-items: center;
     background-color: #585858;
     border-radius: 15px;
     box-shadow: 5px 5px 20px rgba(0, 0, 0, 0.4);
